# SpiderGwen

./: .gitignore  Developers' Notes  ForwardKinematics.py  Microswitch.py  README.md  SpiderGwen.code-workspace  TestLeg.py  maestro.py  rejected_points.csv
Leg.cpp/: Leg.cpp.ino
ST3215_servo/: ST3215_driver.cpp  ST3215_protocol.h  main.cpp
cy-code-v1/: IK_test.py  calibrate.py  gyroscope.py  leg.py  leg_solver.py  maestro.py  main.py  parameter.py  spider.py
cy-code-v2/: config.json
firmware/: platformio.ini
firmware/include/: main.h
firmware/spider_gwen_v4/: platformio.ini
firmware/spider_gwen_v4/src/: main.cpp
firmware/src/: main.cpp
firmware/src/lib/Leg/: leg.h  (+2 more)
hexapod/: Readme
hexapod/firmware/src/: main.cpp  parameters.h
hexapod/hexapod_msgs/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hexapod/hexapod_msgs/log/: latest_build
hexapod/hexapod_msgs/src/: CMakeLists.txt  package.xml
hexapod/hexapod_ros/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
hexapod_ros/: package.xml  setup.py
hexapod_ros/hexapod_ros/: hexapod_controller.py  hexapod_teleop.py  leg.py  maestro_driver.py  spider.py
hexapod_ros/launch/: hexapod.launch.py
legacy/cy-code-v1/: IK_test.py  leg.py  leg_solver_v2.py  spider.py  testswitch.py
legacy/miscellaneous/: Walking_V2.py
legacy/ws-code-v1/: leg_config.py
python-playground/: gyroscope_testing.py
python-playground/cy-code-v1/: gait_test.py  maestro.py
ws-code-v1/: FK_IK_test.py  ForwardKinematics.py  Movement.py  Spider.py  TriLeg.py  leg_config.py  maestro.py
(+126 files in other folders)
